<resources>
    <string name="app_name">TipCalci</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="service_review_txt">How was the service?</string>
    <string name="amazing_txt">Amazing (20%)</string>
    <string name="good_txt">Good (18%)</string>
    <string name="ok_txt">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
</resources>